Fix spacing and footer

--- a/css/main.css
+++ b/css/main.css
@@ -56,13 +56,13 @@ div#footer {
 	text-align: center;
 	width: 100%;
 	height:60px;   /* Height of the footer */
-	padding: 10px 0;
+	padding: 20px 0;
 	position:absolute;
 	bottom:0;
 }
 
 .content {
-	width: 750px;
+	width: 700px;
 	margin: 0 auto;
 }
 
@@ -159,6 +159,9 @@ article section p a {
 /* ==========================================================================
  FOOTER
  ========================================================================== */
+#footer p {
+	margin-bottom: 24px;
+}
 #footer ul {
 	list-style-type: none;
 	padding: 0px;
